# openweather_sdk

./: .gitignore  Cargo.toml  README.md  api_routes.txt
src/: languages.rs  lib.rs  onecall_response.rs  openweather.rs  query.rs  units.rs  utils.rs
src/air_pollution/: air_pollution.rs  air_pollution_response.rs  mod.rs
src/example-json/: current-burke.json  current.json
src/forecast/: forecast.rs  forecast_response.rs  mod.rs
src/geocoding/: geocoding.rs  geocoding_response.rs  mod.rs
src/maps/: map_layer.rs  maps.rs  mod.rs
src/one_call/: historical_response.rs  mod.rs  one_call.rs  one_call_response.rs
src/onecall/: mod.rs  onecall.rs
src/openweather/: air_pollution.rs  current.rs  forecast.rs  geocoding.rs  maps.rs  mod.rs  one_call.rs
src/response_elements/: clouds.rs  mod.rs  rain.rs  snow.rs  temp.rs  weather.rs
src/responses/: air_pollution_response.rs  coord.rs  current_response.rs  daily_aggregation_response.rs  error_response.rs  forecast_response.rs  geocoding_response.rs  historical_response.rs  mod.rs  one_call_response.rs  onecall_response.rs  response_handler.rs  weather.rs  weather_overview_response.rs
src/responses/response_elements/: mod.rs  rain.rs  snow.rs  temp.rs  wind.rs
src/settings/: settings.rs
