[package]
name = "openweather_sdk"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Rose"]
description = "A simple SDK for the OpenWeather API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"]}

[dev-dependencies]
dotenv = "0.15.0"