[package]
name = "openweather_sdk"
version = "0.1.3"
edition = "2021"
authors = ["Jeff Rose"]
description = "a fully typed SDK for the OpenWeather API"
license = "MIT"
repository = "https://github.com/jt-rose/openweather_sdk"
keywords = ["openweather", "weather"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.107"

[dev-dependencies]
dotenv = "0.15.0"
